# paper-influencers

./: .gitignore  .python-version  README.md  pyproject.toml  request.sh
src/: analysis.py  clean_output.py  conversion_rate.py  crontab  get-tweets.py  getkfactor.py  gpt_classifier.py  influencer-algo.py  kfactor.py  make_tables.py  make_tweet_csv.py  network-analysis.py  network.py  request.sh  scale_user.py  subsample.py  tasks.py
