[tool.poetry]
name = "paper-influencers"
version = "0.1.0"
description = "Twitter Influencers"
authors = ["Mickael Temporão <16172142+mickaeltemporao@users.noreply.github.com>"]
license = "CC BY-NC-SA 4.0"

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.5.0"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
