[tool.poetry]
name = "paper-influencers"
version = "0.1.0"
description = "Twitter Influencers"
authors = ["Mickael Temporão <16172142+mickaeltemporao@users.noreply.github.com>"]
license = "CC BY-NC-SA 4.0"

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.5.0"
matplotlib = "^3.8.4"
pyqt6 = "^6.6.1"
pandas = "^2.2.1"
openai = "^1.16.2"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
igraph = "^0.11.6"
altair = {extras = ["all"], version = "^5.4.0"}

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
